[package]
name = "ttrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive"] }

# Dependencies to generate shells complication
[build-dependencies]
clap = { version = "*", features = ["derive"] }
clap_complete = "*"
chrono = { version = "*", features = ["serde"] }
