[package]
name = "ttrack"
version = "0.3.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }

# Dependencies to generate shells complication
[build-dependencies]
clap = { version = "*", features = ["derive"] }
clap_complete = "*"
chrono = { version = "*", features = ["serde"] }
